--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">PicTwin</string>
+    <string name="app_subtitle">Best app!!</string>
+    <string name="pic_mine">Pic mine</string>
+    <string name="pic_yours">Pic yours</string>
+    <string name="night_mode">Night Mode</string>
+    <string name="day_mode">Day Mode</string>
+    <string name="settings">Settings</string>
 </resources>
